--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<link rel="apple-touch-icon" sizes="180x180" href="/images/png/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/png/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/images/png/favicon-16x16.png">
-<link rel="manifest" href="/images/png/site.webmanifest">
-<link rel="mask-icon" href="/images/png/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="apple-touch-icon" sizes="180x180" href="images/png/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/png/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/png/favicon-16x16.png">
+<link rel="manifest" href="images/png/site.webmanifest">
+<link rel="mask-icon" href="images/png/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
@@ -24,9 +24,9 @@
   </head>
   <body>
     <section class="logo">
-      <h1><img src="/images/logo.png" />KRZHV</h1>
+      <h1><img src="images/logo.png" />KRZHV</h1>
 
-      <img src="/images/timer.png" width="64px" height="64px" class="timer" />
+      <img src="images/timer.png" width="64px" height="64px" class="timer" />
     </section>
     <div id="footer" class="container">
         <div class="text-block">
