--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
     <div id="footer" class="container">
         <div class="text-block">
-            <a href="mailto:info@krzhv.com.ua" target="_blank" class="link">info@krzhv.com.ua</a>
+            <a href="mailto:info@krzhv.com.ua" target="_blank" class="link">krzhv@proton.me</a>
         </div>
     </div>
     
