--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </section>
 <div id="footer" class="container">
     <div class="text-block">
-        <a href="mailto:krzhv@proton.me" class="link">krzhv@proton.me</a>
-        <a href="https://example.com" class="link">Приклад 1</a>
-        <a href="https://example.com" class="link">Приклад 2</a>
+        <a href="mailto:krzhv@proton.me" class="link" target="_blank">krzhv@proton.me</a>
+        <a href="https://t.me/krzhvs" class="link" target="_blank">t.me/krzhvs</a>
+        <a href="https://example.com" class="link" target="_blank">Приклад 2</a>
     </div>
 </div>
 
