--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     </section>
 <div id="footer" class="container">
     <div class="text-block">
-        <a href="mailto:krzhv@proton.me" class="link" target="_blank">krzhv@proton.me</a>
-        <a href="https://t.me/krzhvs" class="link" target="_blank">t.me/krzhvs</a>
+        <a href="mailto:krzhv@proton.me" class="link" target="_blank">Email</a>
+        <a href="https://t.me/krzhvs" class="link" target="_blank">Telegram</a>
+        <a href="https://www.linkedin.com/in/korzhov-sv/" class="link" target="_blank">LinkedIn</a>
     </div>
 </div>
 
