Update Firebase configuration and HTML structure

--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
 
       // 2. ВАШІ НАЛАШТУВАННЯ (Вставте сюди дані з консолі Firebase)
       // Замініть об'єкт нижче на той, що ви скопіювали на Етапі 1
-      const firebaseConfig = {
-        apiKey: "ТУТ_ВАШ_ДОВГИЙ_КЛЮЧ",
-        authDomain: "ваш-проект.firebaseapp.com",
-        projectId: "ваш-проект",
-        storageBucket: "ваш-проект.appspot.com",
-        messagingSenderId: "числа",
-        appId: "числа-і-літери"
-      };
+  const firebaseConfig = {
+    apiKey: "AIzaSyCTmVh54GOcTSLFBCxUa-7T19_Rdbmlv7M",
+    authDomain: "krzhv-s.firebaseapp.com",
+    projectId: "krzhv-s",
+    storageBucket: "krzhv-s.firebasestorage.app",
+    messagingSenderId: "1064402723050",
+    appId: "1:1064402723050:web:4276fdcb87b172ef0cf793",
+    measurementId: "G-JEZHMRQYR7"
+  };
 
       // 3. Запускаємо Firebase
       const app = initializeApp(firebaseConfig);
@@ -110,4 +111,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
