--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
 
     <title>KRZHV | Психологічна допомога</title>
+
+    <style>
+        body { font-family: sans-serif; max-width: 600px; margin: 20px auto; padding: 20px; }
+        input, button { padding: 10px; margin: 5px 0; width: 100%; box-sizing: border-box; }
+        .message-box { border: 1px solid #ccc; padding: 10px; margin-top: 10px; background: #f9f9f9; }
+    </style>
   </head>
   <body>
     <section class="logo">
@@ -36,6 +42,11 @@
     </div>
 </div>
 
+<h1>Залиште відгук</h1>
+    
+    <input type="text" id="nameInput" placeholder="Ваше ім'я">
+    <input type="text" id="msgInput" placeholder="Ваше повідомлення">
+    <button id="sendBtn">Відправити</button>
     
     <h2>Відгуки:</h2>
     <div id="messagesList">Loading...</div>
@@ -111,5 +122,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
 
