--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="text-block">
         <a href="https://t.me/krzhvs" class="link" target="_blank">Telegram</a>
         <a href="mailto:krzhv@proton.me" class="link" target="_blank">Email</a>
-        <a href="https://www.linkedin.com/in/korzhov-sv/" class="link" target="_blank">LinkedIn</a>
+        <a href="https://www.instagram.com/serkorzhov/" class="link" target="_blank">Instagram</a>
     </div>
 </div>
 
@@ -43,6 +43,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
 
 
