--- a/index2.html
+++ b/index2.html
@@ -9,36 +9,56 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
-    <style>
+   <style>
         :root {
-            --sage-green: #8DA189;
-            --soft-beige: #F5F2ED;
-            --dark-text: #3A3A3A;
-            --light-gray: #E9E9E9;
+            --primary-bg: #1a1a1a;    /* Темний фон як на сайті */
+            --accent-cyan: #00bcd4;   /* Яскравий блакитний акцент */
+            --text-light: #f5f5f5;    /* Майже білий текст */
+            --card-bg: #252525;       /* Трохи світліший сірий для блоків */
+            --gray-text: #b0b0b0;     /* Сірий текст для менш важливих деталей */
         }
 
         body {
             font-family: 'Open Sans', sans-serif;
-            background-color: var(--soft-beige);
-            color: var(--dark-text);
+            background-color: var(--primary-bg);
+            color: var(--text-light);
             line-height: 1.6;
         }
 
         h1, h2, h3, .navbar-brand {
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
+            color: var(--text-light);
         }
 
+        /* Кнопка в стилі вашого сайту */
         .btn-primary {
-            background-color: var(--sage-green);
-            border: none;
-            padding: 12px 30px;
-            transition: 0.3s;
+            background-color: transparent;
+            border: 2px solid var(--accent-cyan);
+            color: var(--accent-cyan);
+            padding: 10px 25px;
+            font-weight: 600;
+            transition: all 0.3s ease;
         }
 
         .btn-primary:hover {
-            background-color: #7a8c77;
+            background-color: var(--accent-cyan);
+            color: var(--primary-bg);
             transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0, 188, 212, 0.4);
+        }
+
+        .navbar {
+            background-color: rgba(26, 26, 26, 0.95);
+            border-bottom: 1px solid #333;
+        }
+
+        .navbar-brand, .nav-link {
+            color: var(--text-light) !important;
+        }
+
+        .nav-link:hover {
+            color: var(--accent-cyan) !important;
         }
     </style>
 </head>
