--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,42 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg sticky-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">СЕРГІЙ КОРЖОВ</a>
+            <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about">Про мене</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Послуги</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#methods">Методи</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Контакти</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <section class="py-5 d-flex align-items-center" style="min-height: 80vh;">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <h1 class="display-4 mb-3">Сергій Коржов</h1>
+                    <h2 class="h3 text-muted mb-4" style="color: var(--accent-cyan) !important;">Клінічний психолог</h2>
+                    <p class="lead mb-5" style="color: var(--gray-text);">
+                        Допомагаю знайти внутрішній ресурс, подолати тривогу та відновити ментальне здоров'я за допомогою науково доведених методів психотерапії.
+                    </p>
+                    <a href="#contact" class="btn btn-primary btn-lg">Записатися на консультацію</a>
+                </div>
+                <div class="col-lg-6 text-center mt-5 mt-lg-0">
+                    <div style="width: 100%; max-width: 400px; height: 500px; background: var(--card-bg); border-radius: 20px; border: 1px solid #333; display: inline-flex; align-items: center; justify-content: center;">
+                        <span style="color: #555;">[ Ваше фото тут ]</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
