--- a/index2.html
+++ b/index2.html
@@ -99,6 +99,54 @@
             </div>
         </div>
     </section>
+    <section id="about" class="py-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                    <div class="p-5" style="background: var(--card-bg); border-radius: 30px; border: 1px solid #333;">
+                        <h2 class="text-center mb-4">Професійний підхід</h2>
+                        <p class="text-center lead" style="color: var(--gray-text);">
+                            Я — Сергій Коржов, клінічний психолог. Моя робота базується на емпатії, конфіденційності та доказових методах терапії. Спільно ми знайдемо шлях до вашого емоційного благополуччя, розбираючи не лише симптоми, а й першопричини труднощів.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="services" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Напрямки роботи</h2>
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="h-100 p-4" style="background: var(--card-bg); border-radius: 20px; border: 1px solid #333; transition: 0.3s;">
+                        <h3 class="h5" style="color: var(--accent-cyan);">Тривожні стани</h3>
+                        <p style="color: var(--gray-text);">Робота з панічними атаками, фобіями та постійним відчуттям напруги.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="h-100 p-4" style="background: var(--card-bg); border-radius: 20px; border: 1px solid #333; transition: 0.3s;">
+                        <h3 class="h5" style="color: var(--accent-cyan);">Депресивні розлади</h3>
+                        <p style="color: var(--gray-text);">Підтримка при втраті сенсів, апатії та зниженні життєвого тонусу.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="h-100 p-4" style="background: var(--card-bg); border-radius: 20px; border: 1px solid #333; transition: 0.3s;">
+                        <h3 class="h5" style="color: var(--accent-cyan);">Кризи у стосунках</h3>
+                        <p style="color: var(--gray-text);">Допомога у вирішенні конфліктів, побудові кордонів та подоланні самотності.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <style>
+        /* Додамо трохи інтерактивності карткам */
+        #services .h-100:hover {
+            border-color: var(--accent-cyan) !important;
+            transform: translateY(-5px);
+        }
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
