Add methods section and FAQ to index2.html

--- a/index2.html
+++ b/index2.html
@@ -139,6 +139,75 @@
             </div>
         </div>
     </section>
+    <section id="methods" class="py-5" style="background-color: rgba(255,255,255,0.02);">
+        <div class="container">
+            <h2 class="text-center mb-5">Методи, які я використовую</h2>
+            <div class="row align-items-center">
+                <div class="col-lg-6 mb-4 mb-lg-0">
+                    <ul class="list-unstyled">
+                        <li class="mb-4 d-flex align-items-start">
+                            <span class="me-3" style="color: var(--accent-cyan); font-size: 1.5rem;">✔</span>
+                            <div>
+                                <strong>Когнітивно-поведінкова терапія (КПТ)</strong><br>
+                                <small class="text-muted">Працюємо з думками та установками, що заважають жити щасливо.</small>
+                            </div>
+                        </li>
+                        <li class="mb-4 d-flex align-items-start">
+                            <span class="me-3" style="color: var(--accent-cyan); font-size: 1.5rem;">✔</span>
+                            <div>
+                                <strong>Гештальт-підхід</strong><br>
+                                <small class="text-muted">Фокусуємось на усвідомленні почуттів та потреб у моменті "тут і зараз".</small>
+                            </div>
+                        </li>
+                        <li class="d-flex align-items-start">
+                            <span class="me-3" style="color: var(--accent-cyan); font-size: 1.5rem;">✔</span>
+                            <div>
+                                <strong>Клінічне інтерв'ю</strong><br>
+                                <small class="text-muted">Глибока діагностика стану для вибору найефективнішої стратегії допомоги.</small>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-6">
+                    <div class="p-4 border-start border-info" style="background: rgba(0, 188, 212, 0.05);">
+                        <p class="fst-italic">"Психотерапія — це не про 'виправлення' людини, а про створення умов, у яких вона зможе стати собою."</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Популярні запитання</h2>
+            <div class="accordion accordion-flush" id="faqAccordion" style="max-width: 800px; margin: 0 auto;">
+                <div class="accordion-item bg-transparent border-bottom border-secondary">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed bg-transparent text-light shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#faq1">
+                            Скільки триває одна сесія?
+                        </button>
+                    </h2>
+                    <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body text-muted">
+                            Стандартна тривалість консультації — 50 хвилин. Це оптимальний час для глибокої роботи без перевтоми.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item bg-transparent border-bottom border-secondary">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed bg-transparent text-light shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#faq2">
+                            Це конфіденційно?
+                        </button>
+                    </h2>
+                    <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body text-muted">
+                            Так, повна анонімність та збереження вашої історії — це фундамент моєї професійної етики.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <style>
         /* Додамо трохи інтерактивності карткам */
