--- a/index2.html
+++ b/index2.html
@@ -60,6 +60,24 @@
         .nav-link:hover {
             color: var(--accent-cyan) !important;
         }
+               .form-control:focus {
+            background-color: rgba(255,255,255,0.05);
+            color: white;
+            border-color: var(--accent-cyan);
+            box-shadow: none;
+        }
+        .btn-outline-info {
+            color: var(--accent-cyan);
+            border-color: var(--accent-cyan);
+        }
+        .btn-outline-info:hover {
+            background-color: var(--accent-cyan);
+            color: var(--primary-bg);
+        }
+                #services .h-100:hover {
+            border-color: var(--accent-cyan) !important;
+            transform: translateY(-5px);
+        }
     </style>
 </head>
 <body>
@@ -208,14 +226,53 @@
             </div>
         </div>
     </section>
+    <section id="contact" class="py-5" style="background: linear-gradient(180deg, var(--primary-bg) 0%, #252525 100%);">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-5">
+                    <h2 class="mb-4">Зв'язатися зі мною</h2>
+                    <p class="text-muted mb-5">Оберіть зручний для вас спосіб зв'язку або заповніть форму, і я перетелефоную вам найближчим часом.</p>
+                    
+                    <div class="d-flex align-items-center mb-4">
+                        <div class="me-3 text-info" style="font-size: 1.5rem;">📍</div>
+                        <div>м. Київ / Онлайн (Zoom, Google Meet)</div>
+                    </div>
+                    
+                    <div class="mt-5">
+                        <h5 class="mb-3">Месенджери:</h5>
+                        <a href="https://t.me/your_username" class="btn btn-outline-info me-2">Telegram</a>
+                        <a href="https://wa.me/your_number" class="btn btn-outline-info">WhatsApp</a>
+                    </div>
+                </div>
 
-    <style>
-        /* Додамо трохи інтерактивності карткам */
-        #services .h-100:hover {
-            border-color: var(--accent-cyan) !important;
-            transform: translateY(-5px);
-        }
-    </style>
+                <div class="col-lg-7">
+                    <div class="p-4 p-md-5" style="background: var(--card-bg); border-radius: 20px; border: 1px solid #333;">
+                        <form id="appointmentForm">
+                            <div class="mb-3">
+                                <label class="form-label">Ваше ім'я</label>
+                                <input type="text" name="name" class="form-control bg-transparent text-light border-secondary" required>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Номер телефону</label>
+                                <input type="tel" name="phone" class="form-control bg-transparent text-light border-secondary" required>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Ваш запит (коротко)</label>
+                                <textarea name="message" class="form-control bg-transparent text-light border-secondary" rows="3"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100 mt-3" id="submitBtn">Надіслати заявку</button>
+                        </form>
+                        <div id="responseMessage" class="mt-3 text-center d-none"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="py-4 text-center border-top border-secondary mt-5">
+        <p class="text-muted small">© 2024 Сергій Коржов. Усі права захищені. Етичність та конфіденційність понад усе.</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
