--- a/index2.html
+++ b/index2.html
@@ -330,5 +330,34 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+    const scriptURL = https://script.google.com/macros/s/AKfycbw807InODFli2Re6oDX4eKSry3QLZV3SfejO-n3qCWV053wEdnQM9uag6Ohtoji7SYc/exec;
+    const form = document.getElementById('appointmentForm');
+    const btn = document.getElementById('submitBtn');
+    const msg = document.getElementById('responseMessage');
+
+    form.addEventListener('submit', e => {
+        e.preventDefault();
+        btn.disabled = true;
+        btn.innerText = 'Надсилається...';
+
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => {
+                msg.classList.remove('d-none', 'text-danger');
+                msg.classList.add('text-success');
+                msg.innerHTML = 'Дякую! Заявку отримано. Я зв\'яжуся з вами ближчим часом.';
+                form.reset();
+                btn.disabled = false;
+                btn.innerText = 'Надіслати заявку';
+            })
+            .catch(error => {
+                msg.classList.remove('d-none');
+                msg.classList.add('text-danger');
+                msg.innerHTML = 'Помилка! Спробуйте ще раз або напишіть у месенджер.';
+                btn.disabled = false;
+                btn.innerText = 'Надіслати заявку';
+            });
+    });
+</script>
 </body>
 </html>
