--- a/index2.html
+++ b/index2.html
@@ -9,113 +9,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
-    <style>
-        :root {
-            --primary-bg: #1a1a1a;
-            --accent-cyan: #00bcd4;
-            --text-light: #f5f5f5;
-            --card-bg: #252525;
-            --gray-text: #b0b0b0;
-        }
-
-        html {
-            scroll-behavior: smooth; /* Плавна прокрутка до секцій */
-        }
-
-        body {
-            font-family: 'Open Sans', sans-serif;
-            background-color: var(--primary-bg);
-            color: var(--text-light);
-            line-height: 1.6;
-        }
-
-        h1, h2, h3, .navbar-brand {
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 700;
-        }
-
-        .navbar {
-            background-color: rgba(26, 26, 26, 0.95);
-            border-bottom: 1px solid #333;
-            backdrop-filter: blur(10px);
-        }
-
-        .navbar-brand, .nav-link {
-            color: var(--text-light) !important;
-        }
-
-        .nav-link:hover {
-            color: var(--accent-cyan) !important;
-        }
-
-        .btn-primary {
-            background-color: transparent;
-            border: 2px solid var(--accent-cyan);
-            color: var(--accent-cyan);
-            padding: 12px 25px;
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
-
-        .btn-primary:hover {
-            background-color: var(--accent-cyan);
-            color: var(--primary-bg);
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(0, 188, 212, 0.4);
-        }
-
-        .service-card {
-            background: var(--card-bg);
-            border-radius: 20px;
-            border: 1px solid #333;
-            transition: 0.3s;
-            height: 100%;
-            padding: 1.5rem;
-        }
-
-        .service-card:hover {
-            border-color: var(--accent-cyan) !important;
-            transform: translateY(-5px);
-        }
-
-        .form-control {
-            background-color: rgba(255,255,255,0.05) !important;
-            color: white !important;
-            border: 1px solid #444;
-            padding: 12px;
-        }
-
-        .form-control:focus {
-            border-color: var(--accent-cyan);
-            box-shadow: none;
-            background-color: rgba(255,255,255,0.08) !important;
-        }
-
-        .btn-outline-info {
-            color: var(--accent-cyan);
-            border-color: var(--accent-cyan);
-        }
-
-        .btn-outline-info:hover {
-            background-color: var(--accent-cyan);
-            color: var(--primary-bg);
-        }
-
-        .accordion-button {
-            background-color: transparent !important;
-            color: white !important;
-            box-shadow: none !important;
-        }
-
-        .accordion-button:not(.collapsed) {
-            color: var(--accent-cyan) !important;
-        }
-
-        .accordion-item {
-            background-color: transparent;
-            border-color: #333;
-        }
-    </style>
+<link rel="stylesheet" href="/css/styles2.css">
 </head>
 <body>
 
