--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сергій Коржов | Клінічний психолог</title>
-    
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -20,92 +19,56 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#about">Про мене</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Послуги</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Напрямки</a></li>
                     <li class="nav-item"><a class="nav-link" href="#methods">Методи</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Контакти</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Записатися</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <header class="py-5 d-flex align-items-center" style="min-height: 85vh;">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <h1 class="display-3 mb-3">Сергій Коржов</h1>
-                    <h2 class="h4 mb-4 text-muted">Клінічний психолог</h2>
-                    <p class="lead mb-5 text-light opacity-75">Допомагаю знайти внутрішній ресурс та відновити ментальне здоров'я за допомогою доказових методів терапії.</p>
-                    <a href="#contact" class="btn btn-primary btn-lg">Записатися на консультацію</a>
-                </div>
-                <div class="col-lg-6 text-center mt-5 mt-lg-0">
-                    <div style="width: 100%; max-width: 400px; height: 500px; background: var(--secondary-bg); border-radius: 30px; border: 1px solid rgba(141, 153, 174, 0.2); display: inline-flex; align-items: center; justify-content: center;">
-                        <span class="text-muted">Фото психолога</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <section id="about">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-10">
-                    <div class="p-5 text-center" style="background: var(--secondary-bg); border-radius: 30px; border: 1px solid rgba(141, 153, 174, 0.1);">
-                        <h2 class="mb-4">Мій підхід</h2>
-                        <p class="lead text-muted">Я базую роботу на емпатії та науковості. Кожен клієнт — це унікальна історія, яка заслуговує на безпечний простір без засудження.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section id="services">
         <div class="container">
-            <h2 class="text-center mb-5">З чим я працюю</h2>
-            <div class="row g-4">
-                <div class="col-md-4">
+            <h2 class="text-center mb-5">Напрямки роботи</h2>
+            <div class="row g-4"> <div class="col-lg-4 col-md-6">
                     <div class="service-card">
-                        <h3 class="h5 mb-3" style="color: var(--accent-color);">Тривожні стани</h3>
-                        <p class="text-muted mb-0">Ефективна робота з панічними атаками, фобіями та хронічною напругою.</p>
+                        <h3>Тривожні стани</h3>
+                        <p>Робота з панічними атаками, фобіями та постійним відчуттям напруги. Навчимося керувати тривогою та повернемо спокій у ваше життя.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="service-card">
-                        <h3 class="h5 mb-3" style="color: var(--accent-color);">Депресія</h3>
-                        <p class="text-muted mb-0">Пошук сенсів, відновлення енергії та супровід у складні періоди життя.</p>
+                        <h3>Депресивні розлади</h3>
+                        <p>Підтримка при втраті сенсів, апатії та зниженні життєвого тонусу. Допоможу знайти ресурс для відновлення яскравості життя.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="service-card">
-                        <h3 class="h5 mb-3" style="color: var(--accent-color);">Стосунки</h3>
-                        <p class="text-muted mb-0">Вирішення конфліктів, побудова кордонів та робота з емоційною залежністю.</p>
+                        <h3>Кризи у стосунках</h3>
+                        <p>Допомога у вирішенні конфліктів, побудові здорових кордонів та подоланні самотності. Створимо фундамент для гармонійних відносин.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="py-5">
         <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-5">
-                    <h2>Контакти</h2>
-                    <p class="text-muted">Залиште заявку, і я сконтактую з вами для узгодження часу першої сесії.</p>
-                    <div class="mt-4">
-                        <p>📍 Київ / Онлайн (Zoom)</p>
-                        <div class="d-flex gap-2">
-                            <a href="#" class="btn btn-outline-light btn-sm">Telegram</a>
-                            <a href="#" class="btn btn-outline-light btn-sm">WhatsApp</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-7">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
                     <div class="form-container">
+                        <h2 class="text-center mb-4">Записатися на консультацію</h2>
                         <form id="appointmentForm">
-                            <input type="text" name="name" class="form-control" placeholder="Ваше ім'я" required>
-                            <input type="tel" name="phone" class="form-control" placeholder="+380XXXXXXXXX" required>
-                            <textarea name="message" class="form-control" rows="4" placeholder="Ваш запит..."></textarea>
-                            <button type="submit" class="btn btn-primary w-100 mt-4" id="submitBtn">Надіслати</button>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <input type="text" name="name" class="form-control" placeholder="Ваше ім'я" required>
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="tel" name="phone" class="form-control" placeholder="+380XXXXXXXXX" required>
+                                </div>
+                            </div>
+                            <textarea name="message" class="form-control" rows="4" placeholder="Коротко опишіть ваш запит (за бажанням)"></textarea>
+                            <button type="submit" class="btn btn-primary w-100 mt-3" id="submitBtn">Надіслати запит</button>
                         </form>
                         <div id="responseMessage" class="mt-3 text-center d-none"></div>
                     </div>
@@ -114,12 +77,9 @@
         </div>
     </section>
 
-    <footer class="py-4 text-center border-top border-secondary">
-        <p class="text-muted small">© 2026 Сергій Коржов. Етичність та конфіденційність.</p>
-    </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+        // Скрипт залишається без змін, він вже працює коректно
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyMWdpoUWhDqNnyXTJGYrlNg5SQzbeCdSuHbFV1cLHYcN_MOMBZH0c-Q40fxvIRGY1i/exec';
         const form = document.getElementById('appointmentForm');
         const btn = document.getElementById('submitBtn');
@@ -133,17 +93,17 @@
                 .then(response => {
                     msg.classList.remove('d-none', 'text-danger');
                     msg.classList.add('text-success');
-                    msg.innerHTML = 'Заявку успішно надіслано!';
+                    msg.innerHTML = 'Дякую! Заявку отримано. Я зв\'яжуся з вами ближчим часом.';
                     form.reset();
                 })
                 .catch(error => {
                     msg.classList.remove('d-none');
                     msg.classList.add('text-danger');
-                    msg.innerHTML = 'Помилка відправки.';
+                    msg.innerHTML = 'Помилка! Спробуйте ще раз або напишіть у месенджер.';
                 })
                 .finally(() => {
                     btn.disabled = false;
-                    btn.innerText = 'Надіслати';
+                    btn.innerText = 'Надіслати запит';
                 });
         });
     </script>
