--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <title>Сергій Коржов | Клінічний психолог</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="css/styles2.css">
 </head>
 <body>
 
