--- a/index2.html
+++ b/index2.html
@@ -201,7 +201,7 @@
     </section>
 
     <footer class="py-4 text-center border-top border-secondary">
-        <p class="text-muted small mb-0">© 2026 Сергій Коржов. Усі права захищені.</p>
+        <p class="text-muted small mb-0">© 2025-2026 Сергій Коржов. Усі права захищені.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
