--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-lg-6 text-center mt-5 mt-lg-0">
                     <div style="width: 100%; max-width: 400px; height: 500px; background: var(--card-bg); border-radius: 20px; border: 1px solid #333; display: inline-flex; align-items: center; justify-content: center; margin: 0 auto;">
-                        <span style="color: #555;">[ Ваше фото тут ]</span>
+                        <span style="color: #555;"><img src="/images/unnamed.jpg" ></span>
                     </div>
                 </div>
             </div>
