--- a/index2.html
+++ b/index2.html
@@ -785,15 +785,8 @@
             });
         });
 
-        // Firebase Configuration - ПОТРІБНО ЗАМІНИТИ НА ВАШІ ДАНІ
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+        // Google Sheets Integration - ЗАМІНІТЬ URL НА ВАШ
+        const GOOGLE_SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE';
 
         // Form Submission
         document.getElementById('contactForm').addEventListener('submit', async function(e) {
@@ -804,28 +797,25 @@
             submitButton.textContent = 'Відправка...';
             submitButton.disabled = true;
             
-            const formData = {
-                firstName: document.getElementById('firstName').value,
-                lastName: document.getElementById('lastName').value,
-                email: document.getElementById('email').value,
-                phone: document.getElementById('phone').value,
-                preferredDate: document.getElementById('preferredDate').value,
-                preferredTime: document.getElementById('preferredTime').value,
-                issue: document.getElementById('issue').value,
-                timestamp: new Date().toISOString()
-            };
+            const formData = new FormData();
+            formData.append('firstName', document.getElementById('firstName').value);
+            formData.append('lastName', document.getElementById('lastName').value);
+            formData.append('email', document.getElementById('email').value);
+            formData.append('phone', document.getElementById('phone').value);
+            formData.append('preferredDate', document.getElementById('preferredDate').value);
+            formData.append('preferredTime', document.getElementById('preferredTime').value);
+            formData.append('issue', document.getElementById('issue').value);
+            formData.append('timestamp', new Date().toLocaleString('uk-UA', { timeZone: 'Europe/Kiev' }));
 
             try {
-                // ВАЖЛИВО: Після налаштування Firebase замініть URL нижче на ваш Cloud Function URL
-                const response = await fetch('YOUR_CLOUD_FUNCTION_URL', {
+                const response = await fetch(GOOGLE_SCRIPT_URL, {
                     method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(formData)
+                    body: formData
                 });
 
-                if (response.ok) {
+                const result = await response.json();
+
+                if (result.status === 'success') {
                     document.getElementById('successMessage').style.display = 'block';
                     document.getElementById('errorMessage').style.display = 'none';
                     this.reset();
