--- a/index2.html
+++ b/index2.html
@@ -786,7 +786,7 @@
         });
 
         // Google Sheets Integration - ЗАМІНІТЬ URL НА ВАШ
-        const GOOGLE_SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE';
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyMWdpoUWhDqNnyXTJGYrlNg5SQzbeCdSuHbFV1cLHYcN_MOMBZH0c-Q40fxvIRGY1i/exec';
 
         // Form Submission
         document.getElementById('contactForm').addEventListener('submit', async function(e) {
