Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
             </p>
 
             <div class="cta-section">
-                <a href="mailto:korzhov@psy.com" class="cta-button">
-                    Зв'язатися зараз
+                <a href="mailto:krzhv@proton.me" class="cta-button">
+                    Зв'язатися (email)
                 </a>
                 <a href="tel:+380000000000" class="contact-link">+380 (00) 000-00-00</a>
             </div>
