--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 <a href="mailto:krzhv@proton.me" class="cta-button">
                     Зв'язатися (email)
                 </a>
-                <a href="tel:+380000000000" class="contact-link">+380 (00) 000-00-00</a>
+                <a href="https://t.me/korzhovs" class="contact-link">Telegram</a>
             </div>
         </main>
 
