--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 <a href="mailto:krzhv@proton.me" class="cta-button">
                     Зв'язатися (email)
                 </a>
-                <a href="https://t.me/korzhovs" class="contact-link">Telegram</a>
+                <a href="https://t.me/korzhovs" class="contact-link" target="_blank">Telegram</a>
             </div>
         </main>
 
