--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
       <div class="form-wrap reveal reveal-delay-2">
         <div class="form-title">Написати напряму</div>
         <div class="form-sub">Відправте повідомлення — я зв'яжусь з вами найближчим часом</div>
-        <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+        <form action="https://formspree.io/f/mkovqrol" method="POST">
           <div class="form-group">
             <label>Ім'я</label>
             <input type="text" name="name" placeholder="Як до вас звертатись?" required />
