Add z-index to styling for hero badge

--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
       border-radius: 1rem;
       padding: 1rem 1.4rem;
       box-shadow: 0 8px 32px rgba(0,0,0,0.06);
+      z-index: 999;
     }
     .hero-badge-label {
       font-size: 0.7rem;
