Add position relative to hero-visual class

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
+      position: relative;
       opacity: 0;
       animation: fadeIn 1.2s 0.5s forwards;
     }
@@ -641,11 +642,11 @@
           </svg>
           <span><img src="sergiy-photo.jpg" alt="Сергій Коржов" class="hero-photo" /></span>
         </div>
+      </div>
         <div class="hero-badge">
           <div class="hero-badge-label">Формат роботи</div>
           <div class="hero-badge-value">Онлайн · Весь світ</div>
         </div>
-      </div>
     </div>
   </section>
 
