--- a/index.html
+++ b/index.html
@@ -229,17 +229,17 @@
       width: 60px; height: 60px;
       opacity: 0.5;
     }
-    .hero-badge {
-      position: absolute;
-      bottom: -1.5rem;
-      left: -2rem;
-      background: var(--warm-white);
-      border: 1px solid var(--border);
-      border-radius: 1rem;
-      padding: 1rem 1.4rem;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.06);
-      z-index: 999;
-    }
+.hero-badge {
+  position: absolute;
+  bottom: 1.5rem;
+  right: 1rem;
+  background: var(--warm-white);
+  border: 1px solid var(--border);
+  border-radius: 1rem;
+  padding: 1rem 1.4rem;
+  box-shadow: 0 8px 32px rgba(0,0,0,0.06);
+  z-index: 10;
+}
     .hero-badge-label {
       font-size: 0.7rem;
       letter-spacing: 0.1em;
