Update footer copyright year to 2025-2026

--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="footer-logo">Сергій Коржов</div>
-    <div class="footer-copy">© 2026 · Клінічний психолог · КПТ</div>
+    <div class="footer-copy">© 2025-2026 · Клінічний психолог · КПТ</div>
   </footer>
 
   <script>
