--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
     <div class="hero-text">
       <p class="hero-eyebrow">Клінічний психолог · КПТ · Онлайн</p>
       <h1 class="hero-title">
-        Місце, де можна<br><em>розібратись</em><br>із собою
+        Ви давно прокидались із <em>радістю</em> нового дня? Це відчуття не зникло — воно просто чекає, поки ви його знайдете!
       </h1>
       <p class="hero-sub">
         Я допомагаю людям, які застрягли у тривозі, втомі або болючих стосунках — 
