--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
       opacity: 0;
       animation: fadeUp 0.9s 0.5s forwards;
     }
+    .hero-sub-accent {
+  font-family: 'Cormorant Garamond', serif;
+  font-style: italic;
+  font-size: 1.8rem;
+  color: var(--terracotta);
+}
     .hero-actions {
       display: flex; gap: 1rem; align-items: center;
       opacity: 0;
@@ -635,12 +641,13 @@
     <div class="hero-text">
       <p class="hero-eyebrow">Клінічний психолог · КПТ · Онлайн</p>
       <h1 class="hero-title">
-        Ви давно прокидались із <em>радістю</em> нового дня? Це відчуття не зникло — воно просто чекає, поки ви його знайдете!
+        Ви давно прокидались із <em>радістю</em> нового дня? 
       </h1>
-      <p class="hero-sub">
-        Я допомагаю людям, які застрягли у тривозі, втомі або болючих стосунках — 
-        знайти вихід через структурну роботу з мисленням і поведінкою.
+      <p class="hero-sub">Це відчуття не зникло —<br>
+        <span class="hero-sub-accent">воно просто чекає, поки ви його знайдете.</span>
       </p>
+      <p>Я допомагаю людям, які застрягли у тривозі, втомі або болючих стосунках — 
+        знайти вихід через структурну роботу з мисленням і поведінкою.</p>
       <div class="hero-actions">
         <a href="#contact" class="btn-primary">Записатись на зустріч</a>
         <a href="#about" class="btn-ghost">Дізнатись більше</a>
