Refactor hero section text in index.html

--- a/index.html
+++ b/index.html
@@ -643,10 +643,8 @@
       <h1 class="hero-title">
         Ви давно прокидались із <em>радістю</em> нового дня? 
       </h1>
-      <p class="hero-sub">Це відчуття не зникло —<br>
-        <span class="hero-sub-accent">воно просто чекає, поки ви його знайдете.</span>
-      </p>
-      <p>Я допомагаю людям, які застрягли у тривозі, втомі або болючих стосунках — 
+      <p class="hero-sub">Це відчуття не зникло — <span class="hero-sub-accent">воно просто чекає, поки ви його знайдете!</span></p>
+      <p class="" style="font-style:italic;">Я допомагаю людям, які застрягли у тривозі, втомі або болючих стосунках — 
         знайти вихід через структурну роботу з мисленням і поведінкою.</p>
       <div class="hero-actions">
         <a href="#contact" class="btn-primary">Записатись на зустріч</a>
