Update hero title text for clarity

--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ html, body {
     <div class="hero-text">
       <p class="hero-eyebrow">Клінічний психолог · КПТ · Онлайн</p>
       <h1 class="hero-title">
-        Ви давно прокидались із <em>радістю</em> нового дня? 
+        А Ви давно прокидались із <em>почуттям радості</em> нового дня? 
       </h1>
       <p class="hero-sub">Це відчуття не зникло — <span class="hero-sub-accent">воно просто чекає, поки ви його знайдете!</span></p>
       <p class="" style="font-style:italic;">Я допомагаю людям, які застрягли у тривозі, втомі або болючих стосунках — 
